src/components/layout.css
/* ... */
.card--dark-sienna .card__feature__content a {
  color: rgb(255,160,160);
}

.card--dark-gold {
  background: #232323 url('../images/card-dark-gold.png') repeat fixed;
}

.card--dark-gold h2,
.card--dark-gold a {
  color: rgb(175,125,5);
}

.card--dark-gold a.call-to-action--link {
  background-color: rgba(175,125,5,0.75);
}

.card--dark-gold a.call-to-action--link:hover,
.card--dark-gold a.call-to-action--link:active {
  background-color: rgb(175,125,5);
}

.card--dark-gold .card__container {
  background-color: rgba(175,125,5,0.25);
}

.card--dark-gold .card__feature {
  background: transparent url('../images/card-work-feature-harvard-crimson.png') no-repeat top right;
  background-size: contain;
  min-height: 33em;
}

.card--dark-gold.book .card__feature {
  background: transparent url('../images/card-articles-feature-decoupled-drupal.png') no-repeat top right;
}

.card--light-teal {
  background: #e4e4e4 url('../images/card-light-teal.png') repeat fixed;
}

.card--light-teal h2,
.card--light-teal a,
.card--light-teal ul li a,
.card--light-teal p a {
  color: rgb(39,95,95);
}

.card--light-teal a.call-to-action--link {
  background-color: rgba(39,95,95,0.75);
}

.card--light-teal a.call-to-action--link:hover,
.card--light-teal a.call-to-action--link:active {
  background-color: rgb(39,95,95);
}

.card--light-teal .card__container {
  background-color: rgba(0,59,59,0.3);
}

.card--light-teal .card__feature {
  background: transparent url('../images/card-articles-feature-decoupled-drupal.png') no-repeat top left;
  background-size: contain;
  min-height: 30em;
}

.card--light-teal .card__feature__content {
  color: #000;
}

.card--light-teal .card__feature__listing {
  padding-top: 20rem;
}

.card--dark-violet {
  background: #000 url('../images/card-dark-violet.jpg') no-repeat bottom right;
  background-size: contain;
}

.card--dark-violet h2,
.card--dark-violet a {
  color: rgb(134,63,100);
}

.card--dark-violet a.call-to-action--link {
  background-color: rgba(134,63,100,0.75);
}

.card--dark-violet a.call-to-action--link:hover,
.card--dark-violet a.call-to-action--link:active {
  background-color: rgb(134,63,100);
}

.card--dark-violet .card__container {
  background-color: rgba(254,183,220,0.9);
}

.card--light-navy {
  background: #e4e4e4 url('../images/card-light-navy.png') repeat fixed;
}

.card--light-navy h2,
.card--light-navy a {
  color: rgb(33,100,139);
}

.card--light-navy a.call-to-action--link {
  background-color: rgba(33,100,139,0.75);
}

.card--light-navy a.call-to-action--link:hover,
.card--light-navy a.call-to-action--link:active {
  background-color: rgb(33,100,139);
}

.card--light-navy .card__container {
  background-color: rgba(73,140,179,0.35);
}

/**
 * Footer
 */

.prefooter {
  clear: both;
  padding: 1rem 1.5rem;
  background-color: rgba(255,255,255,0.1);
  zoom: 1;
}

.prefooter:before,
.prefooter:after {
  content: " ";
  display: table;
}

.prefooter:after {
  clear: both;
}

.prefooter__container {
  padding: 1rem;
}

.prefooter h3 {
  text-transform: uppercase;
  color: #cdcdcd;
  font-family: 'basic-sans', 'Droid Sans', sans-serif;
  font-weight: bold;
  text-align: center;
}

.prefooter ul {
  padding: 0;
}

.prefooter ul li {
  list-style: none;
  text-align: center;
  margin-top: 2rem;
}

.prefooter ul li a {
  opacity: 0.75;
  transition: opacity 0.3s;
  text-align: center;
}

.prefooter ul li a:hover,
.prefooter ul li a:active {
  opacity: 1;
}

.prefooter ul li a img {
  width: auto;
}

footer {
  background: #232323 url('../images/header.png') repeat fixed;
  font-family: 'basic-sans', 'Droid Sans', sans-serif;
  color: #e4e4e4;
  padding: 4rem;
  text-align: center;
}

footer a {
  color: #ffd966;
}

footer a:hover, footer a:active {
  color: #fff;
}

footer h3 {
  color: #787878;
  padding: 1.5rem 0 0.4rem;
}

/**
 * Media queries
 */
@media all and (min-width: 42em) {

  header .header__language-selector p strong:after {
    display: block;
  }

  nav ul li {
    display: inline;
    float: left;
  }

  nav ul li a {
    display: inline-block;
  }

  nav ul li a:hover, nav ul li a:active {
    background-color: transparent;
  }

  .card {
    min-height: 5rem;
  }

  .card__feature__content.has-image {
    width: 20em;
  }

  .card__feature__listing {
    columns: 2;
  }

  .card--dark-violet {
    background-size: contain;
  }
}

@media all and (max-width: 67em) {

  img {
    width: 100%;
  }

  nav ul li a {
    padding: 1rem 0.25rem 1rem 1.5rem;
  }
}
/* ... */

